added conformance and links